@@ -1,3 +1,5 @@
+* Added support for netCDF CDF-5 (NC_64BIT_DATA).
+
 2.18.3 2017-09-22
 ~~~~~~~~~~~~~~~~~
 
